# Intelligent-Heating-Pilot

./: .claudeignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_CONTEXTUAL_LHS.md  ARCHITECTURE_CONTEXTUAL_LHS_REVISION.md  AUTOMATED_RELEASE_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_CHANGES.md  CONTEXTUAL_LHS_DELIVERY_SUMMARY.md  CONTEXTUAL_LHS_INDEX.md  CONTEXTUAL_LHS_QUICK_REFERENCE.md  CONTRIBUTING.md  DDD_ARCHITECTURE.md  DEBUGGING.md  DOCS_INDEX.md  DOCUMENTATION_MAP.md  GITHUB_RELEASE_v0.4.1.md  GITHUB_RELEASE_v0.4.3.md  GITHUB_RELEASE_v0.4.4.md  GITHUB_RELEASE_v0.5.0-rc.1.md  GITHUB_RELEASE_v0.5.0.md  GITHUB_RELEASE_v0.6.2.md  IMPLEMENTATION_GUIDE_CONTEXTUAL_LHS.md  MIGRATION_GUIDE.md  ML_IMPLEMENTATION_SUMMARY.md  ML_MODEL_DOCUMENTATION.md  ML_QUICKSTART.md  MULTI_ROOM_ARCHITECTURE.md  MULTI_ROOM_IMPLEMENTATION_SUMMARY.md  README.md  coverage.lcov  debug_scheduler.py  docker-compose.yml  hacs.json  pyproject.toml  repository.json  requirements.txt
.claude/: settings.json
.claude/agents/: test-strategy-guardian.md  user-docs-writer.md
.github/: AGENT_QUICKSTART.md  AGENT_WORKFLOW.md  CODEOWNERS  CONTRIBUTOR_STANDARDS.md  PULL_REQUEST_TEMPLATE.md  RC_MIGRATION_GUIDE.md  README.md  RELEASE_TEMPLATE.md  WORKFLOW_MODEL.md  copilot-docs-agent-instructions.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/agents/: QUICK_REFERENCE.md  README.md  TESTING_STRATEGY.md  USAGE_EXAMPLES.md  cloud-integration-expert.instructions  ddd-architect.instructions  developer.agent.md  documentation_agent.agent.md  documentation_specialist.agent.md  project_manager.agent.md  qa_engineer.agent.md  software-architect.agent.md  software_architect.agent.md  tech_lead.agent.md  testing_specialist.agent.md
.github/workflows/: README_RC.md  ci.yml  cleanup-branches.yml  code-quality.yml  create-release.yml  feature-fix-pr.yml  increment-rc-version.yml  integration-pr.yml  prepare-release-candidate.yml  promote-rc-to-release.yml  update-prerelease-on-integration-merge.yml
addon-ml-predictor/: Dockerfile  README.md  app.py  config.json  config.yaml  requirements.txt  run.sh
custom_components/intelligent_heating_pilot/: const.py  (+11 more)
docs/: AUDIT_REPORT.md  BDD_TESTING.md  CONFIGURATION.md  CONTRIBUTING.md  HOW_IT_WORKS.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: automation.yaml
scripts/: check-workflow-setup.sh  rc-helper.sh  setup-workflow.sh  workflow-helper.sh
tests/: conftest.py  test_calculator.py  test_integration.py  test_time_windowed_lhs.py
(+257 files in other folders)
